--- a/.well-known/discord/index.html
+++ b/.well-known/discord/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
 <html>
-<head><title>miserably failing</title></head>
-<body>
-  <pre>
+  <head><title>miserably failing</title></head>
+  <body>
+    <pre>
 dh=3e57cf33b70b353c6d347b6c920b52e14a2c1f59
-  </pre>
-</body>
+    </pre>
+  </body>
 </html>
